# cmux

./: .gitignore  LICENSE  Makefile  README.md  com.corwind.cmux.plist  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  go.mod  go.sum
backend/cmd/cmux/: main.go
backend/defaultprofiles/: allow-tmp.sbpl  embed.go
backend/internal/adapters/config/: config.go  config_test.go  envcache.go  envcache_test.go  shellenv.go  shellenv_test.go
backend/internal/adapters/filesystem/: browser.go
backend/internal/adapters/http/: filesystem_handler.go  filesystem_handler_test.go  router.go  session_handler.go  session_handler_test.go  static.go  static_test.go  template_handler.go  websocket_handler.go  (+1 more)
backend/internal/app/: session_service.go  session_service_test.go  template_service.go  template_service_test.go
backend/internal/domain/: config.go  sandbox_template.go  sandbox_template_test.go  session.go  session_test.go
backend/internal/ports/: filesystem.go  process_manager.go  session_repository.go  template_repository.go
frontend/: .env.development  .env.example  .env.production  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css
frontend/src/config/: env.ts
frontend/src/pages/: HomePage.tsx
frontend/src/router/: routes.tsx
frontend/src/test/: test-utils.tsx
sandbox-profiles/: allow-claude-config.sbpl  allow-homebrew.sbpl
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/dist-placeholder/: index.html
src-tauri/src/: lib.rs  main.rs
(+54 files in other folders)
