[package]
name = "cmux"
version = "0.1.0"
edition = "2021"

[lib]
name = "cmux_lib"
path = "src/lib.rs"

[[bin]]
name = "cmux"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
